gram.output
State 19 conflicts: 2 shift/reduce
State 120 conflicts: 2 shift/reduce
State 121 conflicts: 2 shift/reduce


Grammar

    0 $accept: command $end

    1 command: declaration
    2        | transaction_begin
    3        | transaction_end
    4        | help_cmd

    5 help_cmd: CMD_HELP

    6 transaction_begin: BEGIN_TR TRANSACTION ID

    7 transaction_end: END_TR TRANSACTION

    8 declaration: SELECT DISTINCT attr_list FROM from_list where_clause sort_clause STMT_END
    9            | SELECT attr_list FROM from_list where_clause sort_clause STMT_END
   10            | create_clause
   11            | insert_clause
   12            | delete_clause
   13            | update_clause
   14            | create_index_clause

   15 from_list: from_list SEPARATER from_val
   16          | from_val

   17 from_val: ID
   18         | ID AS ID
   19         | ID ID

   20 attr_list: attr_list SEPARATER attr_name
   21          | attr_name

   22 attr_name: ID PERIOD ID
   23          | ID
   24          | ID AS ID
   25          | attr_name AS ID
   26          | attr_name ID
   27          | ID ID

   28 where_clause: /* empty */
   29             | WHERE condition

   30 attr_name_in_where: ID
   31                   | ID PERIOD ID

   32 operator_in_where: LT
   33                  | EQ
   34                  | ST

   35 operand2_in_where: INTEGER
   36                  | REALNUM
   37                  | attr_name_in_where

   38 condition: attr_name_in_where operator_in_where operand2_in_where
   39          | condition AND condition
   40          | condition OR condition

   41 sort_clause: /* empty */
   42            | SORT BY attr_list sort_order

   43 sort_order: /* empty */
   44           | ASC
   45           | DESC

   46 create_clause: CREATE TABLE ID LGB column_info_list RGB STMT_END

   47 column_info_list: column_info_list SEPARATER column_info
   48                 | column_info

   49 column_info: ID column_type column_null_info pk_info fk_info

   50 column_type: TYPE_INTEGER
   51            | TYPE_FLOAT
   52            | TYPE_VARCHAR LSB INTEGER RSB
   53            | TYPE_CHAR LSB INTEGER RSB

   54 column_null_info: /* empty */
   55                 | NOT COLUMN_NULL
   56                 | COLUMN_NULL

   57 fk_info: /* empty */
   58        | FK REF ID ID

   59 pk_info: /* empty */
   60        | PK

   61 insert_clause: INSERT INTO ID VALUES LSB id_list RSB STMT_END

   62 id_list: id_list SEPARATER data_value
   63        | data_value

   64 data_value: INTEGER
   65           | REALNUM
   66           | ID

   67 update_clause: UPDATE ID SET update_column_value where_clause STMT_END

   68 update_column_value: attr_name_in_where operator_in_where operand2_in_where

   69 delete_clause: DELETE FROM ID where_clause STMT_END

   70 create_index_clause: CREATE INDEX ON ID ID STMT_END


Terminals, with rules where they appear

$end (0) 0
error (256)
SELECT (258) 8 9
FROM (259) 8 9 69
ID (260) 6 17 18 19 22 23 24 25 26 27 30 31 46 49 58 61 66 67 69 70
SEPARATER (261) 15 20 47 62
STMT_END (262) 8 9 46 61 67 69 70
AS (263) 18 24 25
PERIOD (264) 22 31
LT (265) 32
ST (266) 34
EQ (267) 33
INTEGER (268) 35 52 53 64
REALNUM (269) 36 65
WHERE (270) 29
AND (271) 39
OR (272) 40
DISTINCT (273) 8
ASC (274) 44
DESC (275) 45
SORT (276) 42
BY (277) 42
CREATE (278) 46 70
TABLE (279) 46
LGB (280) 46
RGB (281) 46
LSB (282) 52 53 61
RSB (283) 52 53 61
PK (284) 60
NOT (285) 55
COLUMN_NULL (286) 55 56
TYPE_FLOAT (287) 51
TYPE_INTEGER (288) 50
TYPE_VARCHAR (289) 52
TYPE_CHAR (290) 53
INSERT (291) 61
INTO (292) 61
VALUES (293) 61
SET (294) 67
DELETE (295) 69
UPDATE (296) 67
INDEX (297) 70
ON (298) 70
FK (299) 58
REF (300) 58
BEGIN_TR (301) 6
END_TR (302) 7
TRANSACTION (303) 6 7
CMD_HELP (304) 5


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
command (51)
    on left: 1 2 3 4, on right: 0
help_cmd (52)
    on left: 5, on right: 4
transaction_begin (53)
    on left: 6, on right: 2
transaction_end (54)
    on left: 7, on right: 3
declaration (55)
    on left: 8 9 10 11 12 13 14, on right: 1
from_list (56)
    on left: 15 16, on right: 8 9 15
from_val (57)
    on left: 17 18 19, on right: 15 16
attr_list (58)
    on left: 20 21, on right: 8 9 20 42
attr_name (59)
    on left: 22 23 24 25 26 27, on right: 20 21 25 26
where_clause (60)
    on left: 28 29, on right: 8 9 67 69
attr_name_in_where (61)
    on left: 30 31, on right: 37 38 68
operator_in_where (62)
    on left: 32 33 34, on right: 38 68
operand2_in_where (63)
    on left: 35 36 37, on right: 38 68
condition (64)
    on left: 38 39 40, on right: 29 39 40
sort_clause (65)
    on left: 41 42, on right: 8 9
sort_order (66)
    on left: 43 44 45, on right: 42
create_clause (67)
    on left: 46, on right: 10
column_info_list (68)
    on left: 47 48, on right: 46 47
column_info (69)
    on left: 49, on right: 47 48
column_type (70)
    on left: 50 51 52 53, on right: 49
column_null_info (71)
    on left: 54 55 56, on right: 49
fk_info (72)
    on left: 57 58, on right: 49
pk_info (73)
    on left: 59 60, on right: 49
insert_clause (74)
    on left: 61, on right: 11
id_list (75)
    on left: 62 63, on right: 61 62
data_value (76)
    on left: 64 65 66, on right: 62 63
update_clause (77)
    on left: 67, on right: 13
update_column_value (78)
    on left: 68, on right: 67
delete_clause (79)
    on left: 69, on right: 12
create_index_clause (80)
    on left: 70, on right: 14


state 0

    0 $accept: . command $end

    SELECT    shift, and go to state 1
    CREATE    shift, and go to state 2
    INSERT    shift, and go to state 3
    DELETE    shift, and go to state 4
    UPDATE    shift, and go to state 5
    BEGIN_TR  shift, and go to state 6
    END_TR    shift, and go to state 7
    CMD_HELP  shift, and go to state 8

    command              go to state 9
    help_cmd             go to state 10
    transaction_begin    go to state 11
    transaction_end      go to state 12
    declaration          go to state 13
    create_clause        go to state 14
    insert_clause        go to state 15
    update_clause        go to state 16
    delete_clause        go to state 17
    create_index_clause  go to state 18


state 1

    8 declaration: SELECT . DISTINCT attr_list FROM from_list where_clause sort_clause STMT_END
    9            | SELECT . attr_list FROM from_list where_clause sort_clause STMT_END

    ID        shift, and go to state 19
    DISTINCT  shift, and go to state 20

    attr_list  go to state 21
    attr_name  go to state 22


state 2

   46 create_clause: CREATE . TABLE ID LGB column_info_list RGB STMT_END
   70 create_index_clause: CREATE . INDEX ON ID ID STMT_END

    TABLE  shift, and go to state 23
    INDEX  shift, and go to state 24


state 3

   61 insert_clause: INSERT . INTO ID VALUES LSB id_list RSB STMT_END

    INTO  shift, and go to state 25


state 4

   69 delete_clause: DELETE . FROM ID where_clause STMT_END

    FROM  shift, and go to state 26


state 5

   67 update_clause: UPDATE . ID SET update_column_value where_clause STMT_END

    ID  shift, and go to state 27


state 6

    6 transaction_begin: BEGIN_TR . TRANSACTION ID

    TRANSACTION  shift, and go to state 28


state 7

    7 transaction_end: END_TR . TRANSACTION

    TRANSACTION  shift, and go to state 29


state 8

    5 help_cmd: CMD_HELP .

    $default  reduce using rule 5 (help_cmd)


state 9

    0 $accept: command . $end

    $end  shift, and go to state 30


state 10

    4 command: help_cmd .

    $default  reduce using rule 4 (command)


state 11

    2 command: transaction_begin .

    $default  reduce using rule 2 (command)


state 12

    3 command: transaction_end .

    $default  reduce using rule 3 (command)


state 13

    1 command: declaration .

    $default  reduce using rule 1 (command)


state 14

   10 declaration: create_clause .

    $default  reduce using rule 10 (declaration)


state 15

   11 declaration: insert_clause .

    $default  reduce using rule 11 (declaration)


state 16

   13 declaration: update_clause .

    $default  reduce using rule 13 (declaration)


state 17

   12 declaration: delete_clause .

    $default  reduce using rule 12 (declaration)


state 18

   14 declaration: create_index_clause .

    $default  reduce using rule 14 (declaration)


state 19

   22 attr_name: ID . PERIOD ID
   23          | ID .
   24          | ID . AS ID
   27          | ID . ID

    ID      shift, and go to state 31
    AS      shift, and go to state 32
    PERIOD  shift, and go to state 33

    ID        [reduce using rule 23 (attr_name)]
    AS        [reduce using rule 23 (attr_name)]
    $default  reduce using rule 23 (attr_name)


state 20

    8 declaration: SELECT DISTINCT . attr_list FROM from_list where_clause sort_clause STMT_END

    ID  shift, and go to state 19

    attr_list  go to state 34
    attr_name  go to state 22


state 21

    9 declaration: SELECT attr_list . FROM from_list where_clause sort_clause STMT_END
   20 attr_list: attr_list . SEPARATER attr_name

    FROM       shift, and go to state 35
    SEPARATER  shift, and go to state 36


state 22

   21 attr_list: attr_name .
   25 attr_name: attr_name . AS ID
   26          | attr_name . ID

    ID  shift, and go to state 37
    AS  shift, and go to state 38

    $default  reduce using rule 21 (attr_list)


state 23

   46 create_clause: CREATE TABLE . ID LGB column_info_list RGB STMT_END

    ID  shift, and go to state 39


state 24

   70 create_index_clause: CREATE INDEX . ON ID ID STMT_END

    ON  shift, and go to state 40


state 25

   61 insert_clause: INSERT INTO . ID VALUES LSB id_list RSB STMT_END

    ID  shift, and go to state 41


state 26

   69 delete_clause: DELETE FROM . ID where_clause STMT_END

    ID  shift, and go to state 42


state 27

   67 update_clause: UPDATE ID . SET update_column_value where_clause STMT_END

    SET  shift, and go to state 43


state 28

    6 transaction_begin: BEGIN_TR TRANSACTION . ID

    ID  shift, and go to state 44


state 29

    7 transaction_end: END_TR TRANSACTION .

    $default  reduce using rule 7 (transaction_end)


state 30

    0 $accept: command $end .

    $default  accept


state 31

   27 attr_name: ID ID .

    $default  reduce using rule 27 (attr_name)


state 32

   24 attr_name: ID AS . ID

    ID  shift, and go to state 45


state 33

   22 attr_name: ID PERIOD . ID

    ID  shift, and go to state 46


state 34

    8 declaration: SELECT DISTINCT attr_list . FROM from_list where_clause sort_clause STMT_END
   20 attr_list: attr_list . SEPARATER attr_name

    FROM       shift, and go to state 47
    SEPARATER  shift, and go to state 36


state 35

    9 declaration: SELECT attr_list FROM . from_list where_clause sort_clause STMT_END

    ID  shift, and go to state 48

    from_list  go to state 49
    from_val   go to state 50


state 36

   20 attr_list: attr_list SEPARATER . attr_name

    ID  shift, and go to state 19

    attr_name  go to state 51


state 37

   26 attr_name: attr_name ID .

    $default  reduce using rule 26 (attr_name)


state 38

   25 attr_name: attr_name AS . ID

    ID  shift, and go to state 52


state 39

   46 create_clause: CREATE TABLE ID . LGB column_info_list RGB STMT_END

    LGB  shift, and go to state 53


state 40

   70 create_index_clause: CREATE INDEX ON . ID ID STMT_END

    ID  shift, and go to state 54


state 41

   61 insert_clause: INSERT INTO ID . VALUES LSB id_list RSB STMT_END

    VALUES  shift, and go to state 55


state 42

   69 delete_clause: DELETE FROM ID . where_clause STMT_END

    WHERE  shift, and go to state 56

    $default  reduce using rule 28 (where_clause)

    where_clause  go to state 57


state 43

   67 update_clause: UPDATE ID SET . update_column_value where_clause STMT_END

    ID  shift, and go to state 58

    attr_name_in_where   go to state 59
    update_column_value  go to state 60


state 44

    6 transaction_begin: BEGIN_TR TRANSACTION ID .

    $default  reduce using rule 6 (transaction_begin)


state 45

   24 attr_name: ID AS ID .

    $default  reduce using rule 24 (attr_name)


state 46

   22 attr_name: ID PERIOD ID .

    $default  reduce using rule 22 (attr_name)


state 47

    8 declaration: SELECT DISTINCT attr_list FROM . from_list where_clause sort_clause STMT_END

    ID  shift, and go to state 48

    from_list  go to state 61
    from_val   go to state 50


state 48

   17 from_val: ID .
   18         | ID . AS ID
   19         | ID . ID

    ID  shift, and go to state 62
    AS  shift, and go to state 63

    $default  reduce using rule 17 (from_val)


state 49

    9 declaration: SELECT attr_list FROM from_list . where_clause sort_clause STMT_END
   15 from_list: from_list . SEPARATER from_val

    SEPARATER  shift, and go to state 64
    WHERE      shift, and go to state 56

    $default  reduce using rule 28 (where_clause)

    where_clause  go to state 65


state 50

   16 from_list: from_val .

    $default  reduce using rule 16 (from_list)


state 51

   20 attr_list: attr_list SEPARATER attr_name .
   25 attr_name: attr_name . AS ID
   26          | attr_name . ID

    ID  shift, and go to state 37
    AS  shift, and go to state 38

    $default  reduce using rule 20 (attr_list)


state 52

   25 attr_name: attr_name AS ID .

    $default  reduce using rule 25 (attr_name)


state 53

   46 create_clause: CREATE TABLE ID LGB . column_info_list RGB STMT_END

    ID  shift, and go to state 66

    column_info_list  go to state 67
    column_info       go to state 68


state 54

   70 create_index_clause: CREATE INDEX ON ID . ID STMT_END

    ID  shift, and go to state 69


state 55

   61 insert_clause: INSERT INTO ID VALUES . LSB id_list RSB STMT_END

    LSB  shift, and go to state 70


state 56

   29 where_clause: WHERE . condition

    ID  shift, and go to state 58

    attr_name_in_where  go to state 71
    condition           go to state 72


state 57

   69 delete_clause: DELETE FROM ID where_clause . STMT_END

    STMT_END  shift, and go to state 73


state 58

   30 attr_name_in_where: ID .
   31                   | ID . PERIOD ID

    PERIOD  shift, and go to state 74

    $default  reduce using rule 30 (attr_name_in_where)


state 59

   68 update_column_value: attr_name_in_where . operator_in_where operand2_in_where

    LT  shift, and go to state 75
    ST  shift, and go to state 76
    EQ  shift, and go to state 77

    operator_in_where  go to state 78


state 60

   67 update_clause: UPDATE ID SET update_column_value . where_clause STMT_END

    WHERE  shift, and go to state 56

    $default  reduce using rule 28 (where_clause)

    where_clause  go to state 79


state 61

    8 declaration: SELECT DISTINCT attr_list FROM from_list . where_clause sort_clause STMT_END
   15 from_list: from_list . SEPARATER from_val

    SEPARATER  shift, and go to state 64
    WHERE      shift, and go to state 56

    $default  reduce using rule 28 (where_clause)

    where_clause  go to state 80


state 62

   19 from_val: ID ID .

    $default  reduce using rule 19 (from_val)


state 63

   18 from_val: ID AS . ID

    ID  shift, and go to state 81


state 64

   15 from_list: from_list SEPARATER . from_val

    ID  shift, and go to state 48

    from_val  go to state 82


state 65

    9 declaration: SELECT attr_list FROM from_list where_clause . sort_clause STMT_END

    SORT  shift, and go to state 83

    $default  reduce using rule 41 (sort_clause)

    sort_clause  go to state 84


state 66

   49 column_info: ID . column_type column_null_info pk_info fk_info

    TYPE_FLOAT    shift, and go to state 85
    TYPE_INTEGER  shift, and go to state 86
    TYPE_VARCHAR  shift, and go to state 87
    TYPE_CHAR     shift, and go to state 88

    column_type  go to state 89


state 67

   46 create_clause: CREATE TABLE ID LGB column_info_list . RGB STMT_END
   47 column_info_list: column_info_list . SEPARATER column_info

    SEPARATER  shift, and go to state 90
    RGB        shift, and go to state 91


state 68

   48 column_info_list: column_info .

    $default  reduce using rule 48 (column_info_list)


state 69

   70 create_index_clause: CREATE INDEX ON ID ID . STMT_END

    STMT_END  shift, and go to state 92


state 70

   61 insert_clause: INSERT INTO ID VALUES LSB . id_list RSB STMT_END

    ID       shift, and go to state 93
    INTEGER  shift, and go to state 94
    REALNUM  shift, and go to state 95

    id_list     go to state 96
    data_value  go to state 97


state 71

   38 condition: attr_name_in_where . operator_in_where operand2_in_where

    LT  shift, and go to state 75
    ST  shift, and go to state 76
    EQ  shift, and go to state 77

    operator_in_where  go to state 98


state 72

   29 where_clause: WHERE condition .
   39 condition: condition . AND condition
   40          | condition . OR condition

    AND  shift, and go to state 99
    OR   shift, and go to state 100

    $default  reduce using rule 29 (where_clause)


state 73

   69 delete_clause: DELETE FROM ID where_clause STMT_END .

    $default  reduce using rule 69 (delete_clause)


state 74

   31 attr_name_in_where: ID PERIOD . ID

    ID  shift, and go to state 101


state 75

   32 operator_in_where: LT .

    $default  reduce using rule 32 (operator_in_where)


state 76

   34 operator_in_where: ST .

    $default  reduce using rule 34 (operator_in_where)


state 77

   33 operator_in_where: EQ .

    $default  reduce using rule 33 (operator_in_where)


state 78

   68 update_column_value: attr_name_in_where operator_in_where . operand2_in_where

    ID       shift, and go to state 58
    INTEGER  shift, and go to state 102
    REALNUM  shift, and go to state 103

    attr_name_in_where  go to state 104
    operand2_in_where   go to state 105


state 79

   67 update_clause: UPDATE ID SET update_column_value where_clause . STMT_END

    STMT_END  shift, and go to state 106


state 80

    8 declaration: SELECT DISTINCT attr_list FROM from_list where_clause . sort_clause STMT_END

    SORT  shift, and go to state 83

    $default  reduce using rule 41 (sort_clause)

    sort_clause  go to state 107


state 81

   18 from_val: ID AS ID .

    $default  reduce using rule 18 (from_val)


state 82

   15 from_list: from_list SEPARATER from_val .

    $default  reduce using rule 15 (from_list)


state 83

   42 sort_clause: SORT . BY attr_list sort_order

    BY  shift, and go to state 108


state 84

    9 declaration: SELECT attr_list FROM from_list where_clause sort_clause . STMT_END

    STMT_END  shift, and go to state 109


state 85

   51 column_type: TYPE_FLOAT .

    $default  reduce using rule 51 (column_type)


state 86

   50 column_type: TYPE_INTEGER .

    $default  reduce using rule 50 (column_type)


state 87

   52 column_type: TYPE_VARCHAR . LSB INTEGER RSB

    LSB  shift, and go to state 110


state 88

   53 column_type: TYPE_CHAR . LSB INTEGER RSB

    LSB  shift, and go to state 111


state 89

   49 column_info: ID column_type . column_null_info pk_info fk_info

    NOT          shift, and go to state 112
    COLUMN_NULL  shift, and go to state 113

    $default  reduce using rule 54 (column_null_info)

    column_null_info  go to state 114


state 90

   47 column_info_list: column_info_list SEPARATER . column_info

    ID  shift, and go to state 66

    column_info  go to state 115


state 91

   46 create_clause: CREATE TABLE ID LGB column_info_list RGB . STMT_END

    STMT_END  shift, and go to state 116


state 92

   70 create_index_clause: CREATE INDEX ON ID ID STMT_END .

    $default  reduce using rule 70 (create_index_clause)


state 93

   66 data_value: ID .

    $default  reduce using rule 66 (data_value)


state 94

   64 data_value: INTEGER .

    $default  reduce using rule 64 (data_value)


state 95

   65 data_value: REALNUM .

    $default  reduce using rule 65 (data_value)


state 96

   61 insert_clause: INSERT INTO ID VALUES LSB id_list . RSB STMT_END
   62 id_list: id_list . SEPARATER data_value

    SEPARATER  shift, and go to state 117
    RSB        shift, and go to state 118


state 97

   63 id_list: data_value .

    $default  reduce using rule 63 (id_list)


state 98

   38 condition: attr_name_in_where operator_in_where . operand2_in_where

    ID       shift, and go to state 58
    INTEGER  shift, and go to state 102
    REALNUM  shift, and go to state 103

    attr_name_in_where  go to state 104
    operand2_in_where   go to state 119


state 99

   39 condition: condition AND . condition

    ID  shift, and go to state 58

    attr_name_in_where  go to state 71
    condition           go to state 120


state 100

   40 condition: condition OR . condition

    ID  shift, and go to state 58

    attr_name_in_where  go to state 71
    condition           go to state 121


state 101

   31 attr_name_in_where: ID PERIOD ID .

    $default  reduce using rule 31 (attr_name_in_where)


state 102

   35 operand2_in_where: INTEGER .

    $default  reduce using rule 35 (operand2_in_where)


state 103

   36 operand2_in_where: REALNUM .

    $default  reduce using rule 36 (operand2_in_where)


state 104

   37 operand2_in_where: attr_name_in_where .

    $default  reduce using rule 37 (operand2_in_where)


state 105

   68 update_column_value: attr_name_in_where operator_in_where operand2_in_where .

    $default  reduce using rule 68 (update_column_value)


state 106

   67 update_clause: UPDATE ID SET update_column_value where_clause STMT_END .

    $default  reduce using rule 67 (update_clause)


state 107

    8 declaration: SELECT DISTINCT attr_list FROM from_list where_clause sort_clause . STMT_END

    STMT_END  shift, and go to state 122


state 108

   42 sort_clause: SORT BY . attr_list sort_order

    ID  shift, and go to state 19

    attr_list  go to state 123
    attr_name  go to state 22


state 109

    9 declaration: SELECT attr_list FROM from_list where_clause sort_clause STMT_END .

    $default  reduce using rule 9 (declaration)


state 110

   52 column_type: TYPE_VARCHAR LSB . INTEGER RSB

    INTEGER  shift, and go to state 124


state 111

   53 column_type: TYPE_CHAR LSB . INTEGER RSB

    INTEGER  shift, and go to state 125


state 112

   55 column_null_info: NOT . COLUMN_NULL

    COLUMN_NULL  shift, and go to state 126


state 113

   56 column_null_info: COLUMN_NULL .

    $default  reduce using rule 56 (column_null_info)


state 114

   49 column_info: ID column_type column_null_info . pk_info fk_info

    PK  shift, and go to state 127

    $default  reduce using rule 59 (pk_info)

    pk_info  go to state 128


state 115

   47 column_info_list: column_info_list SEPARATER column_info .

    $default  reduce using rule 47 (column_info_list)


state 116

   46 create_clause: CREATE TABLE ID LGB column_info_list RGB STMT_END .

    $default  reduce using rule 46 (create_clause)


state 117

   62 id_list: id_list SEPARATER . data_value

    ID       shift, and go to state 93
    INTEGER  shift, and go to state 94
    REALNUM  shift, and go to state 95

    data_value  go to state 129


state 118

   61 insert_clause: INSERT INTO ID VALUES LSB id_list RSB . STMT_END

    STMT_END  shift, and go to state 130


state 119

   38 condition: attr_name_in_where operator_in_where operand2_in_where .

    $default  reduce using rule 38 (condition)


state 120

   39 condition: condition . AND condition
   39          | condition AND condition .
   40          | condition . OR condition

    AND  shift, and go to state 99
    OR   shift, and go to state 100

    AND       [reduce using rule 39 (condition)]
    OR        [reduce using rule 39 (condition)]
    $default  reduce using rule 39 (condition)


state 121

   39 condition: condition . AND condition
   40          | condition . OR condition
   40          | condition OR condition .

    AND  shift, and go to state 99
    OR   shift, and go to state 100

    AND       [reduce using rule 40 (condition)]
    OR        [reduce using rule 40 (condition)]
    $default  reduce using rule 40 (condition)


state 122

    8 declaration: SELECT DISTINCT attr_list FROM from_list where_clause sort_clause STMT_END .

    $default  reduce using rule 8 (declaration)


state 123

   20 attr_list: attr_list . SEPARATER attr_name
   42 sort_clause: SORT BY attr_list . sort_order

    SEPARATER  shift, and go to state 36
    ASC        shift, and go to state 131
    DESC       shift, and go to state 132

    $default  reduce using rule 43 (sort_order)

    sort_order  go to state 133


state 124

   52 column_type: TYPE_VARCHAR LSB INTEGER . RSB

    RSB  shift, and go to state 134


state 125

   53 column_type: TYPE_CHAR LSB INTEGER . RSB

    RSB  shift, and go to state 135


state 126

   55 column_null_info: NOT COLUMN_NULL .

    $default  reduce using rule 55 (column_null_info)


state 127

   60 pk_info: PK .

    $default  reduce using rule 60 (pk_info)


state 128

   49 column_info: ID column_type column_null_info pk_info . fk_info

    FK  shift, and go to state 136

    $default  reduce using rule 57 (fk_info)

    fk_info  go to state 137


state 129

   62 id_list: id_list SEPARATER data_value .
